<resources>
    <string name="app_name">LevPatrim</string>
    <string name="menuConta">Conta</string>
    <string name="menuLocal">Local</string>
    <string name="menuCentro_de_custo">Centro de Custo</string>
    <string name="menuMarca">Marca</string>
    <string name="menuModelo">Modelo</string>
    <string name="menuPlanta">Planta</string>
    <string name="menuEspecie">Espécie</string>
    <string name="menuUnidade">Unidade de negócio</string>
    <string name="menuLinha">Linha</string>
    <string name="menuEstrutura">Estrutura</string>
    <string name="headTabelas">Tabelas</string>
    <string name="menuEmpresa">Empresa</string>
</resources>
