<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menuConta"
        android:icon="@drawable/ic_list_black_24dp"
        android:iconTint="@color/colorPrimary"
        android:title="@string/menuConta" />

    <item
        android:id="@+id/menuLocal"
        android:icon="@android:drawable/ic_menu_view"
        android:iconTint="@color/colorPrimary"
        android:title="@string/menuLocal" />

    <item
        android:id="@+id/menuCCusto"
        android:icon="@android:drawable/ic_menu_view"
        android:iconTint="@color/colorPrimary"
        android:title="@string/menuCentro_de_custo" />

    <item
        android:id="@+id/menuMarca"
        android:icon="@android:drawable/ic_menu_view"
        android:iconTint="@color/colorPrimary"
        android:title="@string/menuMarca" />

    <item
        android:id="@+id/menuModelo"
        android:icon="@android:drawable/ic_menu_view"
        android:iconTint="@color/colorPrimary"
        android:title="@string/menuModelo" />

    <item
        android:id="@+id/menuPlanta"
        android:icon="@android:drawable/ic_menu_view"
        android:iconTint="@color/colorPrimary"
        android:title="@string/menuPlanta" />

    <item
        android:id="@+id/menuEspecie"
        android:icon="@android:drawable/ic_menu_view"
        android:iconTint="@color/colorPrimary"
        android:title="@string/menuEsp_cie" />


</menu>